correction of log_file

--- a/log_file.htm
+++ b/log_file.htm
@@ -1,4 +1,8 @@
-<FONT SIZE="6"><center>My Differentiator:</center><FONT SIZE="5">
+<FONT SIZE="6"><center>My Differentiator: expression</center><FONT SIZE="5">
 
-<center><img src = Expression.png ></center>
+<center><img src = 111.png ></center>
+
+<FONT SIZE="6"><center>My Differentiator: differential</center><FONT SIZE="5">
+
+<center><img src = 112.png ></center>
 
