+ differential from degree and sin and cos

--- a/log_file.htm
+++ b/log_file.htm
@@ -1,3 +1,7 @@
+<FONT SIZE="6"><center>Dump Differentiator!:</center><FONT SIZE="5">
+
+<center><img src = DiffDump.png ></center>
+
 <FONT SIZE="6"><center>My Differentiator: expression</center><FONT SIZE="5">
 
 <center><img src = 111.png ></center>
