debug differential of degree, debug some leaks

--- a/log_file.htm
+++ b/log_file.htm
@@ -1,6 +1,6 @@
 <FONT SIZE="6"><center>Dump Differentiator!:</center><FONT SIZE="5">
 
-<center><img src = DiffDump.png ></center>
+<center><img src = 1111.png ></center>
 
 <FONT SIZE="6"><center>My Differentiator: expression</center><FONT SIZE="5">
 
@@ -9,4 +9,8 @@
 <FONT SIZE="6"><center>My Differentiator: differential</center><FONT SIZE="5">
 
 <center><img src = 112.png ></center>
+
+<FONT SIZE="6"><center>Dump Differentiator!:</center><FONT SIZE="5">
+
+<center><img src = 1112.png ></center>
 
