srart to make writer to LaTex for process diffirentiation

--- a/log_file.htm
+++ b/log_file.htm
@@ -10,6 +10,10 @@
 
 <center><img src = 112.png ></center>
 
+<FONT SIZE="6"><center>My Differentiator: differential</center><FONT SIZE="5">
+
+<center><img src = 113.png ></center>
+
 <FONT SIZE="6"><center>Dump Differentiator!:</center><FONT SIZE="5">
 
 <center><img src = 1112.png ></center>
